# misc

./: 20230705_lint_memo.md  20230706_build_time.md  20230706_git_merged_memo.md  20230821_mount_memo.md  add_suffix_to_png.sh  analyze_result_bag.sh  apply_clang_format.sh  apply_system_monitor_report.sh  apt_update.sh  autoware.rviz  autoware_velocity.rviz  awsim_config.json  build_one_package-select.sh  build_one_package-up-to.sh  build_one_package.sh  build_with_custom_jobs.sh  call_ndt_align_service.sh  call_pose_initialize_service.sh  change_autoware_for_localization.sh  check_clang-tidy.sh  check_git_diff.sh  check_launch_time.sh  check_linter.sh  checkout_latest_tag.sh  chrome-remote-desktop  claude.sh  collect_result_png.sh  convert_rosbag_to_mcap.sh  copy_chrome_setting.sh  diffusion_planner_launcher.patch.txt  diffusion_planner_universe.patch.txt  exec_ar_tag_based_localizer.sh  exec_autonomous_awsim.sh  exec_awsim.sh  exec_awsim_in_divided_map.sh  exec_carla.sh  exec_convergence_evaluator.sh  exec_driving_log_replayer.sh  exec_general_logging_simulator.sh  exec_kokusouken.sh  (+40 more)
.vscode_template/: c_cpp_properties.json  launch.json  settings.json
awsim_goal/: goals_list_clockwise.yaml  goals_list_clockwise2.yaml  goals_list_counter_clockwise.yaml  goals_list_loop1.yaml  goals_list_loop2.yaml  goals_list_loop3.yaml  goals_medium.yaml  goals_short.yaml
cpp_lib/: glob.hpp  timer.hpp
cpp_project_template/: CMakeLists.txt
cpp_project_template/cpp/: main.cpp
docker/: Dockerfile  allow_gui.sh  (+1 more)
ros2/src/pose_saver/: CMakeLists.txt  package.xml  pose_saver.py
(+87 files in other folders)
